workit-landing-page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Workit </title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -39,7 +39,11 @@
     </div>
     <div class="phone-image">
       <div class="ornamental1">
-        <img class="first-ornamental" src="images/1st-ornamental.png" alt="tkt" />
+        <img
+          class="first-ornamental"
+          src="images/1st-ornamental.png"
+          alt="tkt"
+        />
       </div>
       <img
         class="phone-img"
@@ -52,21 +56,36 @@
         <li class="value1">
           <p class="value-number">1</p>
           <span class="title-value1">Actionable insights</span>
-          <p>Optimize your products, improve customer satisfaction and stay ahead of the competition with our product data analytics.</p>
+          <p>
+            Optimize your products, improve customer satisfaction and stay ahead
+            of the competition with our product data analytics.
+          </p>
         </li>
         <li class="value2">
           <p class="value-number">2</p>
           <span class="title-value2">Data-driven decisions</span>
-          <p>Make data-driven decisions with our product data analytics. Our AI-generated reports help you unlock insights hidden in your product data.</p>
+          <p>
+            Make data-driven decisions with our product data analytics. Our
+            AI-generated reports help you unlock insights hidden in your product
+            data.
+          </p>
         </li>
         <li class="value3">
           <p class="value-number">3</p>
           <span class="title-value3">Always affordable</span>
-          <p>Always affordable pricing that scales with your business. Get top-quality product data analytics services without hidden costs or unexpected fees.</p>
+          <p>
+            Always affordable pricing that scales with your business. Get
+            top-quality product data analytics services without hidden costs or
+            unexpected fees.
+          </p>
         </li>
       </ul>
       <div class="ornamental2">
-        <img class="second-ornamental" src="images/2nd-ornamental.png" alt="tktpas">
+        <img
+          class="second-ornamental"
+          src="images/2nd-ornamental.png"
+          alt="tktpas"
+        />
       </div>
     </div>
   </body>
